Bug 157148 - Sentence box in spelling dialog has no scrollbars
Summary: Sentence box in spelling dialog has no scrollbars
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0 target:7.6.2 target:7.5.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Spell-Checking-Dialog
  Show dependency treegraph
 
Reported: 2023-09-08 01:59 UTC by Aron Budea
Modified: 2026-02-02 14:55 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample ODT (33.85 KB, application/vnd.oasis.opendocument.text)
2023-09-08 01:59 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2023-09-08 01:59:19 UTC
Created attachment 189424 [details]
Sample ODT

Open a document with long sentences and spelling errors, eg. the attached one, and run the spell checked.

=> The text box showing the sentence with the error has no vertical scrollbar.

Occurs in LO 24.2.0.0.alpha0+ (3c7a35dd28fbc337a23473873b3dd47392b883ae).

This is a regression from the following commit, bibisected using bibisect-linux-6.3. Adding CC: to Caolán McNamara.
Some other bugs, eg. bug 126935 and bug 142631 could be traced back to the same commit.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=243b5b392906042ab03800e0b5765e6f3513372c
author		Caolán McNamara <caolanm@redhat.com>	2019-06-14 21:56:44 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-06-22 19:28:38 +0200

weld SpellDialog
Comment 1 Caolán McNamara 2023-09-12 09:20:06 UTC
While we don't have a scrollbar there, I think it was the case that we did actually auto-scroll to keep the current word visible until, probably:

commit 4bb59cd1f45133994d3d13642367470f528094f4
Date:   Thu Jul 8 12:56:23 2021 +0300

    tdf#91519: prevent jump to top of the comment view
Comment 2 Commit Notification 2023-09-12 10:44:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b65c770d095f1c3c6ae68df699b2055a4596fe5a

tdf#157148 ensure we auto-scroll to current location to make it visible

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-09-12 13:24:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/43677cb0d95de06bea0f08e87ccfa3230dc8bd6b

Resolves: tdf#157148 spelling dialog sentence box has no scrollbars

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-09-14 16:32:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5623a25541925b7389ac8203eb35e3d68485b064

tdf#157148 ensure we auto-scroll to current location to make it visible

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-22 17:48:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/42481b165c2fd9814d482b72ca70f51966649c9c

tdf#157148 ensure we auto-scroll to current location to make it visible

It will be available in 7.5.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.