tdf#157148 ensure we auto-scroll to current location to make it visible

Change-Id: I03286c10e488adf3a882fa7fe2813724f27c66f0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156746
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>